# computer-graphics-lab

./: CMakeLists.txt  COURSE.md  README.md
lab1/: CMakeLists.txt  main.cpp
lab1/exercise/: main_exercise.cpp
lab2/: CMakeLists.txt  main.cpp
lab2/exercise/: main_exercise.cpp
lab3/: CMakeLists.txt  main.cpp
lab3/exercise/: main_exercise.cpp
lab4/: CMakeLists.txt  main.cpp  main_zad_1.cpp  main_zad_2.cpp  main_zad_3.cpp
lab5/: CMakeLists.txt  main.cpp
lab6/: CMakeLists.txt  main.cpp
lab6/include/: Camera.h  EBO.h  VAO.h  VBO.h  shaderClass.h
lab6/shaders/: default.vert
lab6/src/: Camera.cpp  EBO.cpp
scripts/: setup_linux.sh  setup_windows.md
